# trias

./: .gitignore  README.md  batch_submit.py  config.example.yaml  pyproject.toml
benchmarks/: distributed-inference-research.md
benchmarks/owasp/: README.md  runner.py  selected-cases.json
benchmarks/owasp/results/: baseline.json  improved-qwen2.5-coder-32b.json  improved-qwen3-coder-next-q4_K_M.json  improved.json
docs/: FILE-BY-FILE-REVIEW.md  GB10-TEST.md  LLAMA-CPP.md  SECURITY-LANES.md
experiments/: nvidia-trias-gui-dev-meeting.py
scripts/: gb10-ssh.sh  scan.sh  start-gb10-sequential-test.sh  sync-to-gb10.sh  test-gb10-file-review.sh
src/trias/: __init__.py  __main__.py  cli.py  config.py  gui_runtime.py  gui_server.py  inference.py  report_parser.py  review-20260613-133246-098237f6.md  review-20260613-140943-1b95a5b5.md  scan.py  scan_config.py  worker.py
src/trias/static/: index.html
systemd/: review-council.service  trias.service
tests/: test_report_parser.py
tests/fixtures/: sample-gb10-review.md
